--- a/netlify.toml
+++ b/netlify.toml
@@ -11,11 +11,11 @@ from = "/blog/*"
 to = "https://public-blog.fly.dev/:splat"
 status = 200
 force = true
-headers = {X-Forwarded-Host = "https://lively-cajeta-2c3459.netlify.app"}
+headers = {X-Forwarded-Host = "https://public-community-blog.netlify.app/"}
 
 [[redirects]]
 from = "/blog"
 to = "https://public-blog.fly.dev/blog/"
 status = 200
 force = true
-headers = {X-Forwarded-Host = "https://lively-cajeta-2c3459.netlify.app"}
+headers = {X-Forwarded-Host = "https://public-community-blog.netlify.app/"}
