--- a/netlify.toml
+++ b/netlify.toml
@@ -7,15 +7,15 @@
 
 
 [[redirects]]
-from = "/blog/*"
-to = "https://public-community-blog.netlify.app/blog/:splat"
-status = 200
-force = true
-headers = {X-Forwarded-Host = "https://public-community-blog.netlify.app/"}
+  from = "/blog/*"
+  to = "https://public-community-blog.netlify.app/:splat"
+  status = 200
+  force = true
+  headers = {X-Forwarded-Host = "public-community-blog.netlify.app"}
 
 [[redirects]]
-from = "/blog"
-to = "https://public-community-blog.netlify.app/blog/"
-status = 200
-force = true
-headers = {X-Forwarded-Host = "https://public-community-blog.netlify.app/"}
+  from = "/blog"
+  to = "https://public-community-blog.netlify.app/blog/"
+  status = 200
+  force = true
+  headers = {X-Forwarded-Host = "public-community-blog.netlify.app"}
