--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gatsby-plugin-manifest": "4.15.1",
     "gatsby-plugin-offline": "5.15.1",
     "gatsby-plugin-react-helmet": "5.15.0",
+    "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-sharp": "4.15.1",
     "gatsby-source-filesystem": "4.15.0",
     "gatsby-source-ghost": "5.0.2",
